- 
    
Bug
 - 
    Resolution: Done
 - 
    
  Not Evaluated                     
     - 
    Qt Creator 6.0.0-beta2
 - 
    None
 
- 
        
 - 
        dd1882b8177a8059a159f52d22ea73c66f31427c (qt-creator/qt-creator/6.0)
 
In order to work around QTCREATORBUG-26375, https://codereview.qt-project.org/c/qt-creator/qt-creator/+/378636 introduced separate naming for the project and the main target/executable in the QtQuick application wizard.
 
 
That broke the running of WebAssembly applications, because the WASM plugin assumes that target and project have the same name and calls emrun with <projectname>.html
 
 
That unfortunately fails, because it should instead be <targetname>.html
 
 
- relates to
 - 
                    
QTCREATORBUG-26656 STM32F769i: Not possible to flash thermo demo from Creator
-         
 - Closed
 
 -         
 
- resulted in
 - 
                    
QTCREATORBUG-26849 [Reg 6.0 -> 7.0] WebAssembly: Launching a qmake based project fails
-         
     - Closed
 
 -